--- a/camb/readme.html
+++ b/camb/readme.html
@@ -13,7 +13,7 @@
 Code for Anisotropies in the Microwave Background by <A
 HREF="http://cosmologist.info/">Antony Lewis</A> and Anthony
 Challinor. <P>
-This version October 2010.
+This version January 2011.
 <P>
 <FONT SIZE=-1>
 Originally based on CMBFAST developed by Uros Seljak and Matias
@@ -109,12 +109,12 @@ where all quantities are in the synchronous gauge and evaluated at the requested
 <A NAME="version">
 <H3>Version History</H3>
 
-<B>May (CosmoMC) and October 2010</B><BR>
+<B>January 2011</B><BR>
 <UL>
 <LI>Added Bispectrum module to calculate CMB lensing and local primordial non-Gaussianity bispectra for temperature and polarization. Compile with -DFISHER to also calculate Fisher elements for the bispectra, including lensing signal variance effects. Corresponding new parameters in the .ini file. 
 <LI><b>lens_potential_output_file</b> format changed to included temperature and polarization spectra (scalar+tensor), and extra column giving [l(l+1)]<sup>3/2</sup>C<sub>&psi;E</sub>/2&pi; - the correlation of the lensing potential with the E polarization. 
 <LI>
-Updates for BAO calculations in CosmoMC May 2010. 
+Updates for BAO calculations were in CosmoMC May 2010. 
 </UL>
 <P>
 <B>January 2010</B><BR>
