cmbdata fsky changes and path handling

--- a/readme.html
+++ b/readme.html
@@ -518,9 +518,10 @@ weighting function or parameter mapping.</ul>
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
-<LI><B>xxxx 2010</B><BR>
+<LI><B>xxxx 2011</B><BR>
 <UL>
 <LI>Updated matlab colormaps in mscripts directory; added <b>color_for_bw.m</b> (yellow-blue/black, which should look consistent printing in B&W).
+<LI><b>all_l_exact</b> likelihood now uses fsky rather than fsky^2 scaling at all L.
 </UL>
 
 <LI><B>May 2010</B><BR>
