IniFile support for INCLUDE files

--- a/readme.html
+++ b/readme.html
@@ -523,7 +523,7 @@ weighting function or parameter mapping.</ul>
 <LI>Updated matlab colormaps in mscripts directory; added <b>color_for_bw.m</b> (yellow-blue/black, which should look consistent printing in B&W).
 <LI><b>all_l_exact</b> likelihood now uses fsky rather than fsky<sup>2</sup> scaling at all L.
 <LI>GetDist changes to use more IO wrapper functions
-<LI>%DATASETDIR% placeholder support for all input files; <b>custom_params</b> input parameter to read and store additional parameter file in CustomParams object (settings.f90), also used as optional additional placeholders.
+<LI>%DATASETDIR% and %LOCALDIR% placeholder support for all input file names; <b>custom_params</b> input parameter to read and store additional parameter file in CustomParams object (settings.f90), also used as optional additional placeholders.
 </UL>
 
 <LI><B>May 2010</B><BR>
