--- a/readme.html
+++ b/readme.html
@@ -524,6 +524,8 @@ weighting function or parameter mapping.</ul>
 <LI><b>all_l_exact</b> likelihood now uses fsky rather than fsky<sup>2</sup> scaling at all L.
 <LI>GetDist changes to use more IO wrapper functions
 <LI>%DATASETDIR% and %LOCALDIR% placeholder support for all input file names; <b>custom_params</b> input parameter to read and store additional parameter file in CustomParams object (settings.f90), also used as optional additional placeholders.
+<LI>.ini files now support INCLUDE(filename) to share common parameters between files. INCLUDES can be nested.
+<LI><b>num_cls</b> now set to 4 by default (include BB). C_l .data files now store every L by default
 </UL>
 
 <LI><B>May 2010</B><BR>
