--- a/camb/readme.html
+++ b/camb/readme.html
@@ -13,7 +13,7 @@
 Code for Anisotropies in the Microwave Background by <A
 HREF="http://cosmologist.info/">Antony Lewis</A> and Anthony
 Challinor. <P>
-This version January 2011.
+This version July 2011.
 <P>
 <FONT SIZE=-1>
 Originally based on CMBFAST developed by Uros Seljak and Matias
@@ -108,8 +108,21 @@ where all quantities are in the synchronous gauge and evaluated at the requested
 
 <P>
 <A NAME="version">
-<H3>Version History</H3>
+<H3>Version history</H3>
 
+<B>July 2011</B><BR>
+<UL>
+<LI>Added <b>high_accuracy_default</b> parameter, to give target accuracy of 0.1% for 500&lt;L&lt;2000 rather than default of 0.3%. This is much faster than increasing the accuracy boost parameters.
+<LI>Added improved high k&tau; approximations from <A HREF="http://arxiv.org/abs/1104.2933">arXiv:1104.2933</A>.
+<LI>Optimized very accurate massive neutrino evolution and perturbatively relativistic expansion (much faster, see the <A HREF="http://cosmologist.info/notes/CAMB.pdf">notes</A>)
+<LI>Fractional numbers of neutrinos now used to increase neutrino temperature equally for all neutrinos, giving consistency for number densities of massive neutrinos
+<LI>
+Merged flat and non-flat derivative routines in equations.f90, time evolution restructuring and some higher-order tight coupling terms from <A HREF="http://arxiv.org/abs/1012.0569">arXiv:1012.0569</A>.
+<LI>Various tweaks to fixed internal accuracy parameters for consistency with <b>high_accuracy_default</b> (very small decrease in speed)
+<LI>Added apodization in lensing.f90 so that slow full integration is now only used for lmax>=5000 rather than lmax>=3000 (or if AccurateBB is set).
+<LI>Added quick calculation of the high-L tails of the lensing convolution by rescaling a template (speeds up high-accurcy lensedCl calculation with minimal loss of accuracy).
+<LI>Removed a couple of options relating to unlensed or temperature-only calculations that are now rarely relevant
+</UL>
 <B>January 2011</B><BR>
 <UL>
 <LI>(14 Jan) updated Makefile for gfortran compatibility and easier compilation for bispectrum fisher calculations
@@ -354,6 +367,9 @@ CMBFAST. Using it does not slow things down significantly and corrects
 errors at around the 2% level.
 
 <A NAME="COMPARE">
+<H3>Comparison with CLASS</H3>
+ The <A href="http://class-code.net">CLASS</A> CMB code is written independently of CAMB and CMBFAST and is in pure C (not C++, despite the name). The basic equations and algorithm are substantially the same as CMBFAST in both cases, with CLASS having a C implementation of CAMB's lensed power spectrum method, and CAMB implementing in F90 some of the new very-sub-horizon approximations introduced in CLASS (which make little difference at WMAP precision, but significantly increase speed for small-scales and high accuracy). Currently CLASS does not do non-flat models or calculate the bispectrum, CAMB does not do warm darm matter. For standard models at CAMB's default accuracy settings speeds should be similar depending on compilers used, with CAMB's <b>high_accuracy_default</b> option being similar to CLASS's <b>cl_permille.pre</b>.
+
 <H3>Comparison with CMBFAST</H3>
 This code was originally developed from CMBFAST 2.4.1 to support closed models
 and gauge invariant variables. After releasing this code CMBFAST 3.2
@@ -523,11 +539,12 @@ Implements the NonLinear module, to calculate non linear scalings of the matter 
 <H3>Accuracy</H3>
 <P>
 <BLOCKQUOTE>
-Scalar errors should rarely exceed 0.3% for min(2500, l well into the damping tail) at default accuracy setting. See also <A HREF="#COMPARE">comparison</A> with CMBFAST. Accuracy of course assumes the model is correct, and is dependent on RECFAST being the correct ionization history; there are currently uncertainties in hydrogen recombination that may give errors around 1% at high l. Lensed C_l TT, TE and EE are accurate at the same level if l_max and k_max are set large enough (to within the approximation that the lensing potential is linear, or the accuracy of the the HALOFIT non-linear model).
+Scalar errors should rarely exceed 0.3% for min(2500, L well into the damping tail) at default accuracy setting, and 0.1% for 500&lt;L&lt;2000 with <b>high_accuracy_default=T</b>. Matter power spectrum errors are usually dominated by interpolation in the acoustic oscillations, with about 0.2% accuracy with high_accuracy_default (but much better rms accuracy).
+See also <A HREF="#COMPARE">comparison</A> with CMBFAST. Accuracy of course assumes the model is correct, and is dependent on RECFAST being the correct ionization history. Lensed C_l TT, TE and EE are accurate at the same level  (to within the approximation that the lensing potential is linear, or the accuracy of the the HALOFIT non-linear model).
 <P>
  Extreme models (e.g. scale &gt; 4, h&gt;1) may give errors of 5% or more.
 <P>
- Tensor errors around 2% or more on small scales (e.g. due to l-interpolation). Low l accuracy somewhat worse than scalars (typically < 1%).
+ Tensor errors around 2% or more on small scales (e.g. due to l-interpolation). Low l accuracy somewhat worse than scalars (typically < 1%). Turn on neutrinos in the input file for accurate results (automatic on high accuracy setting).
 <P>
  Hierarchy truncation errors up to 5% at high l (&gt;1500) in some
    closed models
@@ -553,7 +570,8 @@ Scalar errors should rarely exceed 0.3% for min(2500, l well into the damping ta
 <A NAME="refs">
 <H3>REFERENCES</H3>
 <P>
-Some notes and relevant Maple derivations are given <A HREF="http://camb.info/theory.html">here</A> (see also the Appendix of <A HREF="http://arxiv.org/abs/astro-ph/0406096">astro-ph/0406096</A>). There is a  <A HREF="http://cosmologist.info/cosmomc/cosmomc.bib">BibTex</A> file of references (including <A HREF="http://cosmologist.info/cosmomc">CosmoMC</A>).
+Some notes and relevant Maple derivations are given <A HREF="http://camb.info/theory.html">here</A> (see also the Appendix of <A HREF="http://arxiv.org/abs/astro-ph/0406096">astro-ph/0406096</A>). The <A HREF="http://cosmologist.info/notes/CAMB.pdf">CAMB notes</A> outline the equations and approximations used, and relation to standard synchonous-gauge and Newtonian-gauge variables.
+There is a  <A HREF="http://cosmologist.info/cosmomc/cosmomc.bib">BibTex</A> file of references (including <A HREF="http://cosmologist.info/cosmomc">CosmoMC</A>).
 </P>
 <P>
 Efficient computation of CMB anisotropies in closed FRW Models<BR>
@@ -645,6 +663,13 @@ See also <A HREF="http://arxiv.org/abs/astro-ph/0301064">astro-ph/0301064</A>, <
 <P>
 The shape of the CMB lensing bispectrum<BR>
 Antony Lewis, Anthony Challinor and Duncan Hanson <A HREF="http://arxiv.org/abs/1101.2234">arXiv:1101.2234</A>
+</P>
+
+<B>Sub-horizon radiation approximations</B>
+<P>
+The Cosmic Linear Anisotropy Solving System (CLASS) II:
+                  Approximation schemes<BR>
+Blas, Diego and Lesgourgues, Julien and Tram, Thomas. <A HREF="http://arxiv.org/abs/1104.2933">arXiv:1104.2933</A>
 </P>
 
 
