--- a/readme.html
+++ b/readme.html
@@ -521,7 +521,7 @@ weighting function or parameter mapping.</ul>
 <LI><B>July 2011</B><BR>
 <UL>
 <LI>Updated matlab colormaps in mscripts directory; added <b>color_for_bw.m</b> (yellow-blue/black, which should look consistent printing in B&W).
-<LI><b>all_l_exact</b> likelihood now uses fsky rather than fsky<sup>2</sup> scaling at all L.
+<LI><b>all_l_exact</b> likelihood now uses fsky rather than fsky<sup>2</sup> scaling at all L
 <LI>GetDist changes to use more IO wrapper functions
 <LI>%DATASETDIR% and %LOCALDIR% placeholder support for all input file names; <b>custom_params</b> input parameter to read and store additional parameter file in CustomParams object (settings.f90), also used as optional additional placeholders.
 <LI>.ini files now support INCLUDE(filename) to share common parameters between files. INCLUDES can be nested.
@@ -529,6 +529,7 @@ weighting function or parameter mapping.</ul>
 <LI><b>num_cls</b> now set to 4 by default (include BB). C_l .data files now store every L by default
 <LI>CAMB updated to July 2011 version; new <b>high_accuracy_default</b> input parameter to target 0.1%-accuracy on small scales
 <LI>Added directory of generic python scripts; simple example to make fake perfect CMB dataset with given beam and noise
+<LI>Cosmologui compatibility
 </UL>
 
 <LI><B>May 2010</B><BR>
