gfortran 4.6 compatibility (hopefully)

--- a/readme.html
+++ b/readme.html
@@ -518,6 +518,10 @@ weighting function or parameter mapping.</ul>
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+<LI><B>xxx 2011</B><BR>
+<UL>
+<LI>Changes to params_CMB.f90 for gfortran 4.6 compatibility
+</UL>
 <LI><B>July 2011</B><BR>
 <UL>
 <LI>Updated matlab colormaps in mscripts directory; added <b>color_for_bw.m</b> (yellow-blue/black, which should look consistent printing in B&W).
