--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>This version July 2011</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>This version August 2011</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -518,7 +518,7 @@ weighting function or parameter mapping.</ul>
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
-<LI><B>xxx 2011</B><BR>
+<LI><B>August 2011</B><BR>
 <UL>
 <LI>Changes to params_CMB.f90 for gfortran 4.6 compatibility
 </UL>
