CAMB tweaks, CAMB global_error_flag, Makefile

--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>This version August 2011</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>This version October 2011</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -501,8 +501,11 @@ weighting function or parameter mapping.</ul>
 
 <A NAME="Addons"><h2>Add-ons and extra datasets</h2></A>
 <UL>
+<LI><A HREF="http://www.utdallas.edu/~jdossett/isitgr/">Integrated Software in Testing General Relativity</a>
+<LI><A HREF="http://www.utdallas.edu/~jdossett/jd_codes.html">Generalized BAO</a>
+<LI><A HREF="http://www.nhn.ou.edu/~wang/SNcode/index.html">Yun Wang's Supernova Flux-averaging Likelihood Code</a>
 <LI><A HREF="http://www.esnested.info">Evolutionary Strategies for Cosmology</a> (nested sampling)
-<LI><A HREF="http://www.physi.ch/lukas/Code.html">Python GetDist</A>
+<LI><A HREF="http://lukas.physi.ch/lh/Code.html">Python GetDist</A>
 <LI><A HREF="http://theory.physics.unige.ch/~ringeval/fieldinf.html">Field inflation</a> module for CosmoMC
 <LI><A HREF="http://zuserver2.star.ucl.ac.uk/~hiranya/ModeCode/">ModeCode</A> (Bayesian Parameter Estimation for Inflation)
 <LI><A HREF="http://www.slac.stanford.edu/~amantz/work/cosmomc_priors/">Run-time priors</A>
@@ -518,6 +521,13 @@ weighting function or parameter mapping.</ul>
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+<LI><B>October 2011</B><BR>
+<UL>
+<LI>Fix to setting fractional number of neutrinos since July CAMB version (thanks to Zhiqi Huang)
+<LI>CAMB update for high_accuracy_default precision in non-flat models and minor tweaks
+<LI>Makefile updates
+</UL>
+
 <LI><B>August 2011</B><BR>
 <UL>
 <LI>Changes to params_CMB.f90 for gfortran 4.6 compatibility
