--- a/readme.html
+++ b/readme.html
@@ -523,8 +523,9 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>October 2011</B><BR>
 <UL>
+<LI><B>stop_on_error</B> parameter, if <b>F</b> global_error_flag&gt;0 from CAMB results in a rejected point rather than stop
 <LI>Fix to setting fractional number of neutrinos since July CAMB version (thanks to Zhiqi Huang)
-<LI>CAMB update for high_accuracy_default precision in non-flat models and minor tweaks
+<LI>CAMB update for high_accuracy_default precision in non-flat models, minor tweaks, and error flag
 <LI>Makefile updates
 </UL>
 
