CAMB Oct11/readme

--- a/readme.html
+++ b/readme.html
@@ -525,7 +525,7 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>stop_on_error</B> parameter, if <b>F</b> global_error_flag&gt;0 from CAMB results in a rejected point rather than stop
 <LI>Fix to setting fractional number of neutrinos since July CAMB version (thanks to Zhiqi Huang)
-<LI>CAMB update for high_accuracy_default precision in non-flat models, minor tweaks, and error flag
+<LI>CAMB Oct 2001 update: high_accuracy_default precision in non-flat models, minor tweaks, and error flag
 <LI>Makefile updates
 </UL>
 
