BAO changes from Jason Dosset (with minor changes)

--- a/readme.html
+++ b/readme.html
@@ -67,6 +67,7 @@ Please e-mail details of any bugs or enhancements to <a href="http://cosmologist
 
 <A NAME="Compiling"><h2>Downloading and Compiling</h2></A>
 
+You can use CosmoMC (and CAMB) in the pre-configured virtual machine <A HREF="http://cosmologist.info/CosmoBox">CosmoBox</A> (excluding WMAP), or download and install yourself:
 <ul>
 <li>
 Get the <a href="http://cosmologist.info/cosmomc/submit.html">download</a>
@@ -523,6 +524,7 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>October 2011</B><BR>
 <UL>
+<LI>New BAO multiple-dataset module including Wigglez (thanks to Jason Dosset)
 <LI><B>stop_on_error</B> parameter, if <b>F</b> global_error_flag&gt;0 from CAMB results in a rejected point rather than stop
 <LI>Fix to setting fractional number of neutrinos since July CAMB version (thanks to Zhiqi Huang)
 <LI>CAMB Oct 2001 update: high_accuracy_default precision in non-flat models, minor tweaks, and error flag
