removed old SDSS supernovae files, readme update

--- a/readme.html
+++ b/readme.html
@@ -474,8 +474,7 @@ Replace this file to use other generators, e.g. a fast approximator like
 CMBfit, DASH, PICO, etc.
 <li>
 <b>supernovae.f90</b></li>
-
-<br>As of Oct 2009 uses <A HREF="http://arxiv.org/abs/0908.4274">SDSS</A> by default (thanks to Wessel Valkenburg). Other alternative supernovae_xxx files are supplied (may need to add dummy SN_filename parameter if switching).
+<br>As of May 2010 uses UNION 2 by default (thanks to Nao Suzuki). Other alternative supernovae_xxx files are supplied (may need to add dummy SN_filename parameter if switching).
 
 <li>
 <b>SDSSLy-a-v3.f90, lya.f90</b></li>
