--- a/readme.html
+++ b/readme.html
@@ -502,7 +502,6 @@ weighting function or parameter mapping.</ul>
 <A NAME="Addons"><h2>Add-ons and extra datasets</h2></A>
 <UL>
 <LI><A HREF="http://www.utdallas.edu/~jdossett/isitgr/">Integrated Software in Testing General Relativity</a>
-<LI><A HREF="http://www.utdallas.edu/~jdossett/jd_codes.html">Generalized BAO</a>
 <LI><A HREF="http://www.nhn.ou.edu/~wang/SNcode/index.html">Yun Wang's Supernova Flux-averaging Likelihood Code</a>
 <LI><A HREF="http://www.esnested.info">Evolutionary Strategies for Cosmology</a> (nested sampling)
 <LI><A HREF="http://lukas.physi.ch/lh/Code.html">Python GetDist</A>
@@ -523,10 +522,10 @@ weighting function or parameter mapping.</ul>
 <UL>
 <LI><B>October 2011</B><BR>
 <UL>
-<LI>New BAO multiple-dataset module including Wigglez (thanks to Jason Dosset)
+<LI>New BAO multiple-dataset module including <A HREF="http://arxiv.org/abs/1108.2635">Wigglez</A> (thanks to <A HREF="http://www.utdallas.edu/~jdossett/jd_codes.html">Jason Dosset</a>)
 <LI><B>stop_on_error</B> parameter, if <b>F</b> global_error_flag&gt;0 from CAMB results in a rejected point rather than stop
 <LI>Fix to setting fractional number of neutrinos since July CAMB version (thanks to Zhiqi Huang)
-<LI>CAMB Oct 2001 update: high_accuracy_default precision in non-flat models, minor tweaks, and error flag
+<LI>CAMB Oct 2011 update: high_accuracy_default precision in non-flat models, minor tweaks, and error flag
 <LI>Makefile updates
 </UL>
 
