fixed paramnames output when post processing

--- a/camb/readme.html
+++ b/camb/readme.html
@@ -112,6 +112,14 @@ where all quantities are in the synchronous gauge and evaluated at the requested
 <A NAME="version">
 <H3>Version history</H3>
 
+<B>xxx 2011</B><BR>
+<UL>
+<LI>Halofit changes from <A HREF="http://arxiv.org/abs/1109.4416">arXiv:1109.4416</A> for better accuracy on small scales (thanks to Simeon Bird)
+<LI>Added <b>version_check</b> to output .ini files to track CAMB version being used
+<LI>Option to export curvature alpha_l(r) and beta_l(r) [useful for local non-Gaussianity]
+<LI>Minor bug fixes that don't affect numerical results
+</UL>
+
 <B>October 2011</B><BR>
 <UL>
 <LI>Fixed array bounds issue for closed-model tensor calculation
@@ -582,7 +590,7 @@ See also <A HREF="#COMPARE">comparison</A> with CMBFAST. Accuracy of course assu
 <A NAME="refs">
 <H3>REFERENCES</H3>
 <P>
-Some notes and relevant Maple derivations are given <A HREF="http://camb.info/theory.html">here</A> (see also the Appendix of <A HREF="http://arxiv.org/abs/astro-ph/0406096">astro-ph/0406096</A>). The <A HREF="http://cosmologist.info/notes/CAMB.pdf">CAMB notes</A> outline the equations and approximations used, and relation to standard synchonous-gauge and Newtonian-gauge variables.
+Some notes and relevant Maple derivations are given <A HREF="http://camb.info/theory.html">here</A> (see also the Appendix of <A HREF="http://arxiv.org/abs/astro-ph/0406096">astro-ph/0406096</A>). The <A HREF="http://cosmologist.info/notes/CAMB.pdf">CAMB notes</A> outline the equations and approximations used, and relation to standard synchronous-gauge and Newtonian-gauge variables.
 There is a  <A HREF="http://cosmologist.info/cosmomc/cosmomc.bib">BibTex</A> file of references (including <A HREF="http://cosmologist.info/cosmomc">CosmoMC</A>).
 </P>
 <P>
