--- a/readme.html
+++ b/readme.html
@@ -520,6 +520,11 @@ weighting function or parameter mapping.</ul>
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+<LI><B>xxx2011</B><BR>
+<UL>
+<LI>Fixed generation of .paramnames file when using post processing
+</UL>
+
 <LI><B>October 2011</B><BR>
 <UL>
 <LI>New BAO multiple-dataset module including <A HREF="http://arxiv.org/abs/1108.2635">Wigglez</A> (thanks to <A HREF="http://www.utdallas.edu/~jdossett/jd_codes.html">Jason Dosset</a>)
