CAMB Dec 11, compare_means

--- a/camb/readme.html
+++ b/camb/readme.html
@@ -13,13 +13,12 @@
 Code for Anisotropies in the Microwave Background by <A
 HREF="http://cosmologist.info/">Antony Lewis</A> and Anthony
 Challinor. <P>
-This version October 2011.
+This version December 2011.
 <P>
 <FONT SIZE=-1>
 Originally based on CMBFAST developed by Uros Seljak and Matias
 Zaldarriaga, itself based on Boltzmann code written by
 Edmund Bertschinger, Chung-Pei Ma and Paul Bode.
-For information on CMBFAST see <A HREF="http://cfa-www.harvard.edu/~mzaldarr/CMBFAST/cmbfast.html">http://cmbfast.org</A>.
 For latest information on this program see <A HREF="http://camb.info">camb.info</A>.
 </FONT>
 <P>
@@ -112,12 +111,13 @@ where all quantities are in the synchronous gauge and evaluated at the requested
 <A NAME="version">
 <H3>Version history</H3>
 
-<B>xxx 2011</B><BR>
+<B>December 2011</B><BR>
 <UL>
 <LI>Halofit changes from <A HREF="http://arxiv.org/abs/1109.4416">arXiv:1109.4416</A> for better accuracy on small scales (thanks to Simeon Bird)
 <LI>Added <b>version_check</b> to output .ini files to track CAMB version being used
 <LI>Option to export curvature alpha_l(r) and beta_l(r) [useful for local non-Gaussianity]
 <LI>Minor bug fixes that don't affect numerical results
+<LI>Example params.ini parameters changed to be consistent with CosmoMC's defaults (CMB temperature, effective number of neutrinos)
 </UL>
 
 <B>October 2011</B><BR>
