--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>This version October 2011</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>This version December 2011</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -520,9 +520,11 @@ weighting function or parameter mapping.</ul>
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
-<LI><B>xxx2011</B><BR>
+<LI><B>December 2011</B><BR>
 <UL>
 <LI>Fixed generation of .paramnames file when using post processing
+<LI>Added <b>compare_means</b> matlab script to graphically compare differences between posterior means from two or more .margestats files with the same parameters
+<LI>CAMB update for Dec 2011 (no numerical changes unless using Halofit)
 </UL>
 
 <LI><B>October 2011</B><BR>
