updated covmat, m script

--- a/readme.html
+++ b/readme.html
@@ -523,8 +523,9 @@ weighting function or parameter mapping.</ul>
 <LI><B>December 2011</B><BR>
 <UL>
 <LI>Fixed generation of .paramnames file when using post processing
-<LI>Added <b>compare_means</b> matlab script to graphically compare differences between posterior means from two or more .margestats files with the same parameters
+<LI>Added <b>compare_means</b>.m matlab script to graphically compare differences between posterior means from two or more .margestats files with the same parameters
 <LI>CAMB update for Dec 2011 (no numerical changes unless using Halofit)
+<LI>Included a couple of extra Planck-like .covmat files for non-flat models and massive neutrinos
 </UL>
 
 <LI><B>October 2011</B><BR>
