--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>This version December 2011</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>This version January 2012</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -520,11 +520,12 @@ weighting function or parameter mapping.</ul>
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
-<LI><B>December 2011</B><BR>
+<LI><B>January 2012</B><BR>
 <UL>
 <LI>Fixed generation of .paramnames file when using post processing
 <LI>Added <b>compare_means</b>.m matlab script to graphically compare differences between posterior means from two or more .margestats files with the same parameters
-<LI>CAMB update for Dec 2011 (no numerical changes unless using Halofit)
+<LI>Increased precision in GetDist's .margestat files
+<LI>CAMB update for January 2012
 <LI>Included a couple of extra Planck-like .covmat files for non-flat models and massive neutrinos
 </UL>
 
@@ -558,7 +559,7 @@ weighting function or parameter mapping.</ul>
 <LI><B>May 2010</B><BR>
 <UL>
 <LI>Sets helium abundance using BBN consistency ignoring very small error bar (bbn.f90 thanks to Jan Hamann). Set bbn_consistency=F to fix to old default value of 0.24.
-<LI>Added nnu (effective number of neutrinos) and YHe (healium fraction) to cmbtypes.f90; now easier to make these varying parameters [by default nnu is fixed to 3.046 and YHe set from BBN consistency)
+<LI>Added nnu (effective number of neutrinos) and YHe (helium fraction) to cmbtypes.f90; now easier to make these varying parameters [by default nnu is fixed to 3.046 and YHe set from BBN consistency)
 <LI>Updated supernovae.f90 to Union 2 (Nao Suzuki)
 <LI>Updates to BAO for more general acoustic scale calculation (thanks to Jan Hamann and Beth Reid)
 <LI>Covariance matrices (.covmat) now only include varied parameters and have a header giving names of parameters used (so much easier to reuse if parameters are re-ordered or other parameters added)
