--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>This version January 2012</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>This version September 2012</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -163,15 +163,20 @@ Keys setting input values for specific parameters can be set using numbered key 
 
 <LI><B>Parameter limits and proposal density</B><BR>
 The parameter limits, estimated distribution widths and starting points are listed
-as the <B>param[paramname]</B> variables. The proposal density changes parameters
-using a Gaussian with a standard deviation given by the specified width multiplied by the value of the <B>propose_scale</B> parameter.  The propose  width should be of the order of the conditional posterior width (i.e. the expected error in that parameter when other parameters are fixed). If you specify a <b>propose_matrix</b>
+as the <B>param[paramname]</B> variables for each parameter, of the form
+<pre>
+ param[paramname] = center min max start_width propose_width
+</pre>
+The <em>start_width</em> entry determines the randomly chosen dispersion of the starting position about the given <i>centre</i>, and should  be as large or larger than the posterior (for the convergence diagnostic to be reliable, chains should start at widely separated points). Chains are restricted to stay within the bounds determined by <i>min</i> and <i>max</i>.
+<p>
+ The sampler proposes changes in parameters using a proposal density function with a width determined by <i>propose_width</i> (multiplied by the value of the global <B>propose_scale</B> parameter).  The <em>propose_width</em> should be of the order of the conditional posterior width (i.e. the expected error in that parameter when other parameters are fixed). If you specify a <b>propose_matrix</b>
 (approximate covariance matrix for the parameters), the
 parameter distribution widths are determined from its eigenvalues instead, and
 the proposal density changes the parameter eigenvectors. The covariance
 matrix can be computed using "getdist" once you have done one run - the file_root.covmat file.
-A .covmat file is supplied for some basic parameter sets. The covariance matrix does not have to include all the parameters that are used - zero entries will be updated from the input propose widths of new parameters (the propose width should be of the size of the conditional distribution of the parameter - typically quite a bit smaller than the marginalized posterior width; generally too small is better than too large). The "start width" param[paramname] entry determines the randomly chosen dispersion of the starting position about the given centre, and should  be as large or larger than the posterior (for the convergence diagnostic to be reliable, chains should start at widely separated points). The scale of the proposal density relative to the covariance is given by the <B>propose_scale</B> parameter. If your propose_matrix is significantly broader than the expected posterior, this number can be decreased.
-<BR>
-If you don't have a propose_matrix, set <B>estimate_propose_matrix</B> = T to automatically estimate it by numerical differentiation about the best fit point. To use this option you should not have parameter priors cutting off the distribution near the maximum likelihood. It may not work very reliably.
+A .covmat file is supplied for some basic parameter sets. The covariance matrix does not have to include all the parameters that are used - zero entries will be updated from the input propose widths of new parameters (the propose width should be of the size of the conditional distribution of the parameter - typically quite a bit smaller than the marginalized posterior width; generally too small is better than too large).  The scale of the proposal density relative to the covariance is given by the <B>propose_scale</B> parameter. If your propose_matrix is significantly broader than the expected posterior, this number can be decreased.
+<p>
+If you don't have a propose_matrix, you can use <B>estimate_propose_matrix</B> = T to automatically estimate it by numerical differentiation about the best fit point. To use this option you should not have parameter priors cutting off the distribution near the maximum likelihood. It may not work very reliably, especially if you have parameters peaking near hard cut-offs in the prior (by <i>min</i> or <i>max</i>).
 
 <BR><BR>
 <LI><A NAME="sampling"></A><B>Sampling method</B><BR>
@@ -184,8 +189,10 @@ The default accuracy is aimed at WMAP. Set <B>high_accuracy_default = T</B> to t
 
 <LI><B>Best-fit point</B><BR>
 
-Set <B>action</B> =2 to just calculate the best-fit point and stop. Set <B>delta_loglike</B> to the tolerance on the log likelihood for finding the best fit. The values are output to a file called file_root.minimum. Note that this function does not always work very reliably.
-
+Set <B>action</B> =2 to just calculate the best-fit point and stop. As of Sept 2012 this uses 
+<A HREF="http://www.damtp.cam.ac.uk/user/na/NA_papers/NA2009_06.pdf">Powell's  2009 BOBYQA</A> bounded minimization routine, which works from two parameters up to hundreds of parameters, but does require that the likelihood return a valid number at all points between the bounds given on the base parameters in the input .ini file. The algorithm starts at the point given by the <i>center</i> parameter values given in the .ini file, and iterates until the parameter values are converged to within a radius of  <b>max_like_radius</b> in units of the input parameter <i>propose width</i>s; by default <i>max_like_radius = 0.01</i> (the convergence criterion is a radius in nD space; <em>max_like_radius</em> is scaled by the root of the number of parameters so that on average each parameter is converged to a fraction <em>max_like_radius</em> of its <em>propose_width</em>). The best-fit values (and derived and nuisance parameters) are output to a file called <em>file_root</em>.minimum. The method works for parameters with hard bounds that truncate the posterior, e.g. for neutrino mass mnu>0. It does not use the propose_matrix, only the input parameter bounds, center and propose_width.
+<BR><BR>
+action=2 only runs on one node, so compile without MPI or run only one MPI instance. It can be run  interactively to get best-fit points in typically order 100 CAMB calls, just a few minutes if you have  fast multi-core processor  (so CAMB is using multiple openmp threads). 
 <BR><BR>
 
 <LI><B>Data file output</B><BR>
